--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "clubconnect",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "unique-names-generator": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
